--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
 body
 {
-	background-color:yellow;
+	background-color:#3366CC;
 }
 #main
 {
-	width:500px;
-	height:500px;
-	border:2px solid black;
-	background-color:red;
+	width:1000px;
+	height:620px;
+	border:2px solid #99CCFF;
+	background-color:#99CCFF;
+	margin-left:150px;
+	box-shadow:2px 2px 2px 2px black;
+	-webkit-box-shadow:2px 2px 2px 2px black;
+	position:relative;
+}
+#top
+{
+	width:980px;
+	height:150px;
+	border:2px solid #99CCFF;
+	background-color:#3366CC;
+	margin-left:10px;
+	margin-top:10px;
 }
