--- a/style.css
+++ b/style.css
@@ -4,21 +4,33 @@ body
 }
 #main
 {
-	width:1000px;
+	width:1300px;
 	height:620px;
 	border:2px solid #99CCFF;
 	background-color:#99CCFF;
-	margin-left:150px;
+	margin-left:20px;
 	box-shadow:2px 2px 2px 2px black;
 	-webkit-box-shadow:2px 2px 2px 2px black;
 	position:relative;
 }
 #top
 {
-	width:980px;
-	height:150px;
+	width:1280px;
+	height:120px;
 	border:2px solid #99CCFF;
 	background-color:#3366CC;
-	margin-left:10px;
-	margin-top:10px;
+	margin-left:8px;
+	margin-top:5px;
+}
+#left_logo
+{
+	width:240px;
+	height:110px;
+	margin-top:5px;
+	margin-left:5px;
+	background-color:#00297A;
+}
+#left_logo:hover
+{
+	box-shadow:2px 2px 2px 2px black;
 }
